feat(text): add type variations

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,4 +1,10 @@
+@font-primary: 'Verdana';
+
+@color-default-text: #333;
+
 @color-primary: #00aeff;
 @color-secondary: #12c175;
-
-@font-primary: 'Verdana';
+@color-tertiary: #3afff8;
+@color-danger: #ff4949;
+@color-warning: #ffbe00;
+@color-success: #12c175;
