feat(divider): add divider component, stories, and tests

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -8,3 +8,10 @@
 @color-danger: #ff4949;
 @color-warning: #ffbe00;
 @color-success: #12c175;
+
+@border-color-base: #dcdcdc;
+
+@border-width: 0.1em;
+
+@default-vertical-padding: 1.5em;
+@default-vertical-margin: 1.5em;
