feat(divider): changes to variables

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,5 +1,7 @@
 @font-primary: 'Verdana';
 
+/* COLORS */
+
 @color-default-text: #333;
 
 @color-primary: #00aeff;
@@ -9,9 +11,12 @@
 @color-warning: #ffbe00;
 @color-success: #12c175;
 
-@border-color-base: #dcdcdc;
+/* BORDERS */
 
-@border-width: 0.1em;
+@border-color-base: #dcdcdc;
+@border-width: 0.01em;
+
+/* SPACING */
 
 @default-vertical-padding: 1.5em;
 @default-vertical-margin: 1.5em;
