feat(grid): add responsive grid handler

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -22,3 +22,10 @@
 @default-vertical-margin: 1.5em;
 
 @default-grid-gap: 1em;
+
+/* BREAKPOINTS */
+
+@breakpoint-small: 480px;
+@breakpoint-medium: 768px;
+@breakpoint-large: 1024px;
+@breakpoint-xlarge: 1200px;
