chore(storybook): removing unneeded renders

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -2,8 +2,10 @@
 @import './variables';
 
 @import './components/Text';
+@import './components/Heading';
 @import './components/Divider';
 @import './components/Grid';
+@import './components/Button';
 
 body {
   font-family: @font-primary;
