--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -11,15 +11,24 @@
 @color-warning: #ffbe00;
 @color-success: #12c175;
 
+@color-white: #fff;
+
 /* BORDERS */
 
 @border-color-base: #dcdcdc;
 @border-width: 0.01em;
 
+@border-radius: 0.5em;
+
 /* SPACING */
 
 @default-vertical-padding: 1.5em;
 @default-vertical-margin: 1.5em;
+
+@default-horizontal-padding: 1em;
+@default-horizontal-margin: 1em;
+
+@default-element-padding: 0.5em 1em;
 
 @default-grid-gap: 1em;
 
