feat(input): add component, story, test

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -6,6 +6,7 @@
 @import './components/Divider';
 @import './components/Grid';
 @import './components/Button';
+@import './components/Input';
 
 body {
   font-family: @font-primary;
