--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -18,6 +18,8 @@
 @border-color-base: #dcdcdc;
 @border-width: 0.01em;
 
+@border-color-selected: @color-primary;
+
 @border-radius: 0.5em;
 
 /* SPACING */
