--- a/src/styles/components/Input.less
+++ b/src/styles/components/Input.less
@@ -16,6 +16,8 @@
       transition: 0.2s ease all;
       outline: none;
 
+      font-size: 0.9rem;
+
       &:focus {
         border-color: @border-color-selected;
       }
@@ -35,6 +37,12 @@
       input {
         border-color: @color-danger;
       }
+    }
+
+    .cds-input--validation-message {
+      color: @color-danger;
+      font-size: 0.8rem;
+      padding: 0.5em 0.2em;
     }
   }
 }
