--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -13,9 +13,11 @@
 
 @color-white: #fff;
 
+@color-disabled: #d6d6d6;
+
 /* BORDERS */
 
-@border-color-base: #dcdcdc;
+@border-color-base: #e7e7e7;
 @border-width: 0.01em;
 
 @border-color-selected: @color-primary;
@@ -30,7 +32,7 @@
 @default-horizontal-padding: 1em;
 @default-horizontal-margin: 1em;
 
-@default-element-padding: 0.5em 1em;
+@default-element-padding: 0.4em 1.5em 0.5em 1.5em;
 
 @default-grid-gap: 1em;
 
