--- a/src/styles/components/Input.less
+++ b/src/styles/components/Input.less
@@ -7,7 +7,8 @@
       margin-bottom: 0.75rem;
       padding-left: 0.25rem;
     }
-    input {
+    input,
+    textarea {
       display: block;
       width: auto;
       padding: @default-element-padding;
@@ -34,7 +35,8 @@
     }
 
     &.cds-input--invalid {
-      input {
+      input,
+      textarea {
         border-color: @color-danger;
       }
     }
